# automation-framework

./: README.md  pyproject.toml
automationframework/config/: config.py
automationframework/data/: emails.py
automationframework/pages/: CareersPage.py  CompanyPage.py  ContactPage.py
tests/: report.html  test_careers_page.py  test_company_page.py  test_contact_page.py
