[tool.poetry]
name = "automationframework"
version = "0.1.0"
description = ""
authors = ["Elena Velkoska"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.8.2"
parameterized = "^0.8.1"
pytest = "^7.2.2"
requests = "^2.28.2"
pytest-html = "^3.2.0"
pytest-xdist = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
